--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/oSoc17/datascouts#readme",
   "dependencies": {
-    "waterfall.js": "^1.1.0"
+    "vue-resource": "^1.3.4"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
